Fixed jail and properties Fixed issue with request freedom Added names to merchants Fixed alert and night z-index Added character names to huts

--- a/app/static/css/basics.css
+++ b/app/static/css/basics.css
@@ -80,7 +80,7 @@ textarea {
     left: 25%;
     opacity: 0;
     transition: .3s;
-    z-index: 1000;
+    z-index: 1000000;
     pointer-events: none;
     background-color: var(--game-secondary-bg);
     padding: 6.25px 12.5px;
