--- a/app/static/css/game.css
+++ b/app/static/css/game.css
@@ -58,7 +58,7 @@ body {
 }
 
 .tired-overlay div {
-    z-index: 100000;
+    z-index: 1000000;
     position: absolute;
     height: 0;
     background-color: #000;
